Updates from Overleaf

--- a/thesis/paper/sections/4_implementation/index.tex
+++ b/thesis/paper/sections/4_implementation/index.tex
@@ -174,9 +174,9 @@ Collapse component can be used to hide long-form content within a collapsible pa
 
 \subsection{Button}
 
-\subsection{Input}
+Button component is simplest and the most primitive way of triggering commands. It accepts the \textit{onClick} complex attribute, which can accept one or many commands under it.
 
-\subsection{Form}
+\subsection{Input}
 
 \section{Commands}
 
@@ -207,3 +207,4 @@ State command is used to set the state or retrieve read a value from the state. 
 \end{figure}
 
 \subsection{Alert}
+
