--- a/thesis/paper/utils/xml-lang.tex
+++ b/thesis/paper/utils/xml-lang.tex
@@ -6,7 +6,7 @@
 \definecolor{cyan}{rgb}{0.0,0.6,0.6}
 
 \lstset{
-  basicstyle=\ttfamily,
+  basicstyle=\ttfamily\footnotesize,
   columns=fullflexible,
   showstringspaces=false,
   commentstyle=\color{gray}\upshape
