--- a/thesis/paper/sections/3_solution/intertextClients.tex
+++ b/thesis/paper/sections/3_solution/intertextClients.tex
@@ -33,7 +33,7 @@ Figure \ref{fig:ex_cmd_post_timeout} shows an example of how a network request a
 \begin{minipage}{\linewidth}
 \begin{lstlisting}[language=xml]
 <timeout delay="1000">
-  <post endpoint="/refresh"></post>
+  <request endpoint="/refresh"></request>
 </timeout>
 \end{lstlisting}
 \end{minipage}
@@ -44,11 +44,14 @@ Figure \ref{fig:ex_cmd_post_timeout} shows an example of how a network request a
 \begin{figure}
 \begin{minipage}{\linewidth}
 \begin{lstlisting}[language=xml]
-<form endpoint="/todo/save">
-  <input name="item_title"></input>
-  <input name="item_description"></input>
-  <button>Submit</button>
-</form>
+<input name="item_title"></input>
+<input name="item_description"></input>
+<button>
+  <text>Submit</text>
+  <button.onClick>
+    <request endpoint="/items/save"></request>
+  </button.onClick>
+</button>
 \end{lstlisting}
 \end{minipage}
 \caption{Form command with reference on server side to internal input values}%
@@ -61,8 +64,8 @@ Figure \ref{fig:ex_cmd_post_timeout} shows an example of how a network request a
 router.get('/signup', async (req, res, next) => {
   
   const currentStep = req.body.state?.current_step ?? 0
-  const currentFormData = req.body.params?.form_data
-  const previousFormData = req.body.state?.form_data
+  const currentInputState = req.body.inputState
+  const previousInputState = req.body.state.input_state
   
   // check if user finished the form
   if (currentStep == LAST_STEP) {
@@ -84,7 +87,10 @@ router.get('/signup', async (req, res, next) => {
       // increment the current step
       step: currentStep + 1
       // merge current form data with previous
-      formData: merge(previousFormData, currentFormData)
+      inputState: merge(
+        previousInputState,
+        currentInputState
+      )
     });
   }
 });
@@ -98,7 +104,7 @@ router.get('/signup', async (req, res, next) => {
 
 Intertext clients offer basic state management, making it possible to serve stateful Intertext applications using serverless/stateless backends. Front-end state can be fully driven from the backend via IUIDL. Intertext client offers two types of storage, persisted and volatile. 
 
-Volatile storage is kept in the memory and it is persisted across the session. The purpose of this storage is to keep temporary values, such as users progress in a long form distributed across multiple pages. Intertext clients passes the entire application state on the volatile storage to the backend on every request, allowing backend to build logic around the current state of the front-end application, and serve the UI accordingly. Figure \ref{fig:state_signup_progress_js} and \ref{fig:state_signup_progress_xml} shows this through an hypothetical sign up form with steps distributed across multiple steps. On figure \ref{fig:state_signup_progress_js}, we see the pseudo-code implementation of the stateless backend for this scenario. It can be seen that the current step user is at on the form, and the form data collected thus far is kept in the volatile state on the front-end. The state gets passed on to the backend on every request made to the "/signup" endpoint. We retrieve the current step, and serve different responses accordingly. If user completed the last step, then we execute our application logic (which in this case is signing user up), and render the result page. Otherwise, we increment the current step, combine the form data collected thus far, and render the form template with these. On the form template on figure \ref{fig:state_signup_progress_xml}, we use the <state> block to instruct the Intertext client to record these new set of data to the front-end, so it could be passed on to the backend on the next request. Moreover, we render the correct form UI based on the step user is currently at.
+Volatile storage is kept in the memory and it is persisted across the session. The purpose of this storage is to keep temporary values, such as users progress in a long form distributed across multiple pages. Intertext clients passes the entire application state on the volatile storage to the backend on every request, allowing backend to build logic around the current state of the front-end application, and serve the UI accordingly. Figure \ref{fig:state_signup_progress_js} and \ref{fig:state_signup_progress_xml} shows this through an hypothetical sign up form with steps distributed across multiple steps. On figure \ref{fig:state_signup_progress_js}, we see the pseudo-code implementation of the stateless backend for this scenario. It can be seen that the current step user is at on the form, and the input state data collected thus far is kept in the volatile state on the front-end. The state gets passed on to the backend on every request made to the "/signup" endpoint. We retrieve the current step, and serve different responses accordingly. If user completed the last step, then we execute our application logic (which in this case is signing user up), and render the result page. Otherwise, we increment the current step, combine the form data collected thus far, and render the form template with these. On the form template on figure \ref{fig:state_signup_progress_xml}, we use the <state> block to instruct the Intertext client to record these new set of data to the front-end, so it could be passed on to the backend on the next request. Moreover, we render the correct form UI based on the step user is currently at.
 
 Another type of storage is the persisted storage. As the name suggests, values stored this way is persisted across sessions. Unlike the volatile storage, in which the data is kept in the memory, persisted storage gets stored locally using the storage option available to the host platform. By default, data available in the persisted storage is not passed on to the backend in every request automatically, but can be configured to do so.
 
@@ -111,10 +117,10 @@ In order to protect user privacy, Intertext clients block cross-origin storage r
 
 <!-- set front-end state to read on later requests  -->
 <state key="current_step">{{ step }}</state>
-<state key="form_data">{{ formData }}</state>
+<state key="input_state">{{ inputState }}</state>
 
 {{#ifEquals step 1}}
-  <!-- step 1 -->
+  <!-- form elements for step 1 -->
 {{/ifEquals}}
 
 {{#ifEquals step 2}}
