--- a/thesis/paper/sections/7_discussion/futureWork.tex
+++ b/thesis/paper/sections/7_discussion/futureWork.tex
@@ -12,3 +12,5 @@
 - cross-origin storage read
 
 - media queries
+
+- permission flow for requests (requests outside same origin, images loaded from remote)
